--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -178,11 +178,11 @@
                         <br />
                         <label id="labelMotivoSuspension">Motivo de suspensión:</label>
                         <select id="motivo" name="motivo">
-                            <option value="faltaMaterial">Falta de material</option>
-                            <option value="faltaPersonal">Falta de personal</option>
-                            <option value="faltaHerramientas">Falta de herramientas</option>
-                            <option value="condicionRiesgosa">Condición riesgosa</option>
-                            <option value="esperaMaterial">A la espera de material</option>
+                            <option value="Falta de material">Falta de material</option>
+                            <option value="Falta de personal">Falta de personal</option>
+                            <option value="Falta de herramientas">Falta de herramientas</option>
+                            <option value="Condición riesgosa">Condición riesgosa</option>
+                            <option value="A la espera de material">A la espera de material</option>
                         </select>
                         <input type="hidden" name="OrdenTrabajoId" value="@Model.PedidoTrabajo.ID_Orden_Trabajo_Pk" />
                     </div>
