--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -2,15 +2,12 @@
 @model PPTT.Pages.PT.DetailsPPTT
 
 @{
-    ViewData["Title"] = "Detalles Pedido de trabajos";
+
 }
 
-<h1>Detalle</h1>
-
 <div>
-    <h2>Pedidos de trabajo</h2>
-    <hr />
     <h3>Datos del solicitante</h3>
+    <form>
     <dl class="row">          
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.IP_Solicitante)
@@ -67,8 +64,9 @@
             @Html.DisplayFor(model => model.PedidoTrabajo.Dependencia_Interna.Descripcion_Dependencia)
         </dd>
     </dl>
-    <hr/>
-    <h3>Datos del Trabajo</h3>        
+    </form>
+    <h3>Datos del Trabajo</h3>  
+    <form>
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.Fecha_Subida)
@@ -235,9 +233,9 @@
             </div>
         </div>
     </div><!-- VENTANA MODAL DE ESTADO PENDIENTE -->
-    
+    </form>
     <div>
-    <a asp-page="./Index">Back to List</a>
+        <a class="btn-action" asp-page="./Index">Volver a la Lista</a>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
@@ -277,3 +275,125 @@
         });
     });
 </script>
+    <style>
+        button {
+            display: inline-block;
+            text-decoration: none;
+            padding: 4px 6px; /* Ajustar el padding */
+            margin: 2px; /* Reducir margen */
+            border: 1px solid #4caf50; /* Bordes de botones */
+            border-radius: 4px; /* Bordes más redondeados */
+            background-color: #4caf50; /* Color de fondo de los botones */
+            color: white;
+            transition: background-color 0.3s, transform 0.3s;
+            font-size: 0.8em; /* Tamaño de fuente reducido */
+        }
+
+            button:hover {
+                background-color: #4caf50; /* Mantener el color al pasar el mouse */
+                transform: translateY(-2px); /* Efecto al pasar el mouse */
+            }
+
+        body {
+            background-color: #e0e8f1;
+        }
+
+        h4 {
+            color: #003d6b; /* Color azul para h4 y detalles */
+            margin-top: 20px;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        h3 {
+            font-size: 3em;
+            color: #003d6b;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+
+        dt {
+            color: #003d6b; /* Color azul para los dt */
+            font-weight: bold;
+        }
+
+        a.btn-action, input[type=submit] {
+            display: inline-block;
+            text-decoration: none;
+            padding: 8px 12px;
+            margin: 4px;
+            border: 1px solid #003d6b;
+            border-radius: 5px;
+            background-color: #003d6b;
+            color: white;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+            a.btn-action:hover, input[type=submit]:hover {
+                background-color: #002e5d;
+                transform: translateY(-2px);
+            }
+
+        form {
+            align-items: center;
+            justify-content: center;
+            width: 65%;
+            margin: 30px auto;
+            padding: 20px;
+            background-color: #e0e8f1;
+            border: 1px solid #003d6b;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 61, 107, 0.2);
+        }
+
+        legend {
+            font-size: 1.2em;
+            color: #003d6b;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        .submit {
+            background-color: #003d6b;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+            .submit:hover {
+                background-color: #002e5d;
+            }
+
+        .custom-textarea {
+            width: 100%;
+            height: 150px;
+            resize: none;
+        }
+
+        label, input[type="text"], select, .submit, h4 {
+            font-size: 1em;
+            font-weight: bold;
+            color: #003d6b;
+        }
+
+        input[type="password"], input[type="text"], input[type="number"], select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 15px;
+            border: 1px solid #003d6b;
+            border-radius: 4px;
+            background-color: white;
+        }
+
+        .centered-button {
+            display: flex;
+            margin-top: 20px;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
