--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -63,8 +63,9 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PedidoTrabajo.Dependencia_Interna.Descripcion_Dependencia)
         </dd>
-</form>
-    <h3>Datos del Trabajo</h3>
+    </dl>
+    </form>
+    <h3>Datos del Trabajo</h3>  
     <form>
     <dl class="row">
         <dt class="col-sm-2">
@@ -108,14 +109,14 @@
         </dt>
         <dd class="col-sm-10">
             <select asp-for="PedidoTrabajo.ID_Estado_Fk"
-                    asp-items="Model.Estado.Select(d=> new SelectListItem
-                                {
-                                    Value = d.ID_Estado_PK.ToString(),
-                                    Text = d.Descripcion_Estado.ToString()
-                                })"
+                    asp-items="Model.Estado.Select(d => new SelectListItem
+            {
+                Value = d.ID_Estado_PK.ToString(),
+                Text = d.Descripcion_Estado
+            })"
                     id="deptSelect"
                     class="formControl">
-                <option hidden selected value="">@Model.PedidoTrabajo.Estado.Descripcion_Estado</option>
+                <option value="" disabled selected hidden>@Model.PedidoTrabajo.Estado.Descripcion_Estado</option>
             </select>
         </dd>
     </dl>
@@ -249,7 +250,7 @@
     </div><!-- VENTANA MODAL DE ESTADO PENDIENTE -->
 
     <div>
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="./Index" class="btn-action">Back to List</a>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
