--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -104,13 +104,22 @@
             @Html.DisplayNameFor(model => model.PedidoTrabajo.ID_Prioridad_Fk)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PedidoTrabajo.Prioridad.Descripcion_Prioridad)
+            <select asp-for="PedidoTrabajo.ID_Prioridad_Fk"
+                    asp-items="@(Model.Prioridad.Select(d => new SelectListItem
+                        {
+                            Value = d.ID_Prioridad_Pk.ToString(),
+                            Text = d.Descripcion_Prioridad
+                        }))"
+                    id="prioSelect"
+                    class="formControl"
+                    data-orden-id="@Model.PedidoTrabajo.ID_Orden_Trabajo_Pk">                
+            </select>           
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.ID_Estado_Fk)
         </dt>
         <dd class="col-sm-10">
-            <select asp-for="PedidoTrabajo.ID_Estado_Fk"
+            <select asp-for="PrioridadId"
                     asp-items="Model.Estado.Select(d=> new SelectListItem
                                 {
                                     Value = d.ID_Estado_PK.ToString(),
@@ -118,7 +127,7 @@
                                 })"
                     id="deptSelect"
                     class="formControl">
-                <option hidden selected value="">@Model.PedidoTrabajo.Estado.Descripcion_Estado</option>
+                <option hidden selected value="">@Model.PedidoTrabajo.Estado.Descripcion_Estado</option>                
             </select>
         </dd>
     </dl>
@@ -139,7 +148,7 @@
                         </span>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" id="cancelaAsignacion" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-secondary" id="canFin" data-dismiss="modal">Cancelar</button>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
                     </div>
                 </form>
@@ -167,7 +176,7 @@
                         </span>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" id="cancelaAsignacion" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-secondary" id="canCan" data-dismiss="modal">Cancelar</button>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
                     </div>
                 </form>
@@ -199,7 +208,7 @@
                         <input type="hidden" name="OrdenTrabajoId" value="@Model.PedidoTrabajo.ID_Orden_Trabajo_Pk" />
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" id="cancelaAsignacion" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-secondary" id="canSus" data-dismiss="modal">Cancelar</button>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
                     </div>
                 </form>
@@ -215,13 +224,13 @@
                     </div>
                    <div class="modal-body">
                         <p class="text-muted">Por favor, seleccione un usuario para asignar a este pedido de trabajo.</p>
-                        <select class="form-control" asp-for="IdUsuario" asp-items="@(new SelectList(Model.Usuarios, "ID_Usuario_Pk", "NombreCompleto"))">
+                        <select class="form-control" asp-items="@(new SelectList(Model.Usuarios, "ID_Usuario_Pk", "NombreCompleto"))">
                             <option hidden selected value="">Seleccione un usuario</option>
                         </select>
                         <input type="hidden" name="OrdenTrabajoId" value="@Model.PedidoTrabajo.ID_Orden_Trabajo_Pk" />
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" id="cancelaAsignacion" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-secondary" id="canPro" data-dismiss="modal">Cancelar</button>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
                     </div>
                 </form>
@@ -242,14 +251,35 @@
                         <input type="hidden" name="OrdenTrabajoId" value="@Model.PedidoTrabajo.ID_Orden_Trabajo_Pk" />
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" id="cancelaAsignacion" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-secondary" id="canPen" data-dismiss="modal">Cancelar</button>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
                     </div>
                 </form>
             </div>
         </div>
     </div><!-- VENTANA MODAL DE ESTADO PENDIENTE -->
-
+    <div class="modal fade" id="ModalPrioridad" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <form method="post" asp-page-handler="SetPrioridad">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="PrioModalLabel">CAMBIO DE <b>PRIORIDAD</b></h5>
+                    </div>
+                    <div class="modal-body">
+                        <span id="warningMessagePen" class="alert alert-warning">
+                            <b>Advertencia:</b> Estás a punto de cambiar la prioridad de esta orden. Por favor, confirma que deseas proceder.
+                        </span>
+                        <input type="hidden" name="OrdenTrabajoId" value="@Model.PedidoTrabajo.ID_Orden_Trabajo_Pk" />
+                        <input type="hidden" name="PrioridadId" id="PrioridadId" value="" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" id="canPrio" data-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-primary">Aceptar</button>
+                    </div>
+                </form>
+        </div>
+    </div>
+    </div><!-- VENTANA MODAL DE PRIORIDAD -->
     <div>
         <a asp-page="./Index">Back to List</a>
     </div>
@@ -265,7 +295,11 @@
                 var year = today.getFullYear();
                 return year + "-" + month + "-" + day;
             }
-
+            $('#prioSelect').change(function () {
+                $('#ModalPrioridad').modal('show');
+                const selectedOption = $(this).find("option:selected");
+                $('#PrioridadId').val(selectedOption.val())
+            })
             $('#deptSelect').change(function () {
                 alert("Advertencia: El usuario que solicito el pedido de trabajo será notificado del cambio de estado.");
                 var selectedOption = $(this).val();
@@ -287,6 +321,24 @@
                     $('#ModalEstCan').modal('show');
                     $('#fechaCan').val(getTodayDate());
                 }
+            });        
+            $('#canPen').click(function () {
+                $('#ModalEstPen').modal('hide');
+            });
+            $('#canCan').click(function () {
+                $('#ModalEstCan').modal('hide');
+            });
+            $('#canSus').click(function () {
+                $('#ModalEstSus').modal('hide');
+            });
+            $('#canFin').click(function () {                
+                $('#ModalEstFin').modal('hide');
+            });
+            $('#canPro').click(function () {
+                $('#ModalEstPro').modal('hide');
+            });
+            $('#canPrio').click(function () {                
+                $('#ModalPrioridad').modal('hide');
             });
         });
     </script>
